--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,16 @@
-# Compiled class file
-*.class
-
-# Log file
+.idea
+*.iml
+/target
+/tmp
+/service/target
+/service/tmp
+/client/target
+/client/tmp
 *.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+*.log.*
+/service/logs
+/logs
+*.DS_Store
+/.classpath
+/.project
+/.settings/
